.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/Branch_Email__c.field-meta.xml
<CustomField>
    <fullName>Branch_Email__c</fullName>
    <formula>Pay_Transaction__r.tc9_pr__Client__r.Branch__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Email</label>
    <type>Text</type>
</CustomField>