.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <formula>Pay_Transaction__r.tc9_pr__Client__r.Branch__r.Branch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>