.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>