.vscode/allianceuat_compare/force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/Primary_Branch__c.field-meta.xml
<CustomField>
    <fullName>Primary_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary branch detected for this pay advice</inlineHelpText>
    <label>Primary Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>